[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/menu-ui/small-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://general-ui/sound-container.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/menu-ui/menu-ui.gd" type="Script" id=4]
[ext_resource path="res://menu/menu-ui/level-ui.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="MenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 192.0
custom_constants/margin_top = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TitleContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="TitleContainer/CenterContainer"]
margin_left = 16.0
margin_right = 1008.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Space Birds"

[node name="ButtonContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -133.0
margin_bottom = 133.0
custom_constants/margin_top = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ButtonContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 330.0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer/CenterContainer"]
margin_left = 302.0
margin_right = 722.0
margin_bottom = 266.0

[node name="StartButton" type="Button" parent="ButtonContainer/CenterContainer/VBoxContainer"]
margin_right = 420.0
margin_bottom = 102.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Start"
flat = true

[node name="LevelButton" type="Button" parent="ButtonContainer/CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 420.0
margin_bottom = 184.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Select level"
flat = true

[node name="OptionButton" type="Button" parent="ButtonContainer/CenterContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 420.0
margin_bottom = 266.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Option"
flat = true

[node name="SoundContainer" parent="." instance=ExtResource( 3 )]
custom_constants/margin_bottom = 0

[node name="LevelUI" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="ButtonContainer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonContainer/CenterContainer/VBoxContainer/LevelButton" to="." method="_on_LevelButton_pressed"]
[connection signal="goto_level" from="LevelUI" to="." method="_on_LevelUI_goto_level"]
[connection signal="return_to_menu" from="LevelUI" to="." method="_on_LevelUI_return_to_menu"]
